# Coinsender_Contract_Injective

./: Cargo.toml  DOC.md  README.md  multisend.wasm
artifacts/: checksums.txt  checksums_intermediate.txt  cosmwasm_contracts.wasm
schema/: execute_msg.json  instantiate_msg.json  query_msg.json
src/: contract.rs  lib.rs  msg.rs  state.rs
tests/: mod.rs  utils.rs
tests/multisend/: mod.rs  test_multisend.rs
tests/test_utility/: mod.rs  test_change_bank.rs  test_change_fee.rs  test_change_owner.rs
