[package]
name = "cosmwasm-contracts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]
name = "cosmwasm_contracts"

[dependencies]
cosmwasm-std = { version = "1.0.0-beta8", features = ["staking"] }
cosmwasm-schema = "1.2.3"
cw-storage-plus = "1.0.1"
cw2 = "1.0.1"
thiserror = "1.0.40"
cw20 = "1.0.1"
cw20-base = "1.0.1"
uint = "0.9.5"
rust_decimal = { version = "1.29.1", features = ["maths"] }

[dev-dependencies]
cosmwasm-schema = "1.0.0"
cw-multi-test = "0.16.5"